--- a/src/app.css
+++ b/src/app.css
@@ -18,9 +18,16 @@
     display: flex;
     flex-direction: row;
     margin-left: 350px;
+    width: 100%;
 }
 
 .post-section {
     width: 75%;
     border-radius: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.follow-section {
+    width: 25%;
+    height: 100vh;
+    background-color: pink;
 }
