--- a/src/app.css
+++ b/src/app.css
@@ -26,8 +26,9 @@
     border-radius: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.follow-section {
-    width: 25%;
-    height: 100vh;
-    background-color: pink;
+.fixed-side-container a {
+    display: flex;
+    padding: 8px;
+    text-decoration: none;
+    text-transform: capitalize;
 }
