--- a/src/components/FeedLayout.css
+++ b/src/components/FeedLayout.css
@@ -39,9 +39,9 @@
     border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.feed-section {
+/* .feed-section {
     margin-left: 380px;
-}
+} */
 
 .follow-section {
     padding-left: 20px;
