--- a/src/app.css
+++ b/src/app.css
@@ -78,9 +78,12 @@
 @media only screen and (max-width: 500px) {
 
     .fixed-side-container,
-    .end-section,
-    profile-content {
+    .end-section {
         display: none;
+    }
+
+    .fixed-sidebar {
+        border-right: transparent !important;
     }
 
     .feed-section {
